package FinalProject;

import java.awt.*;

public interface ShapeResizer {
    Shape Resize(Shape s, float amount);
}
